Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4472

Number of active connections is incorrect

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 6.2.0
    • 6.2.0, 7.0.0
    • HTTP
    • None

    Description

      Looks like the number of active connections is not decrementing and is always increasing.

      active connections keeps increasing in traffic_top:

      Active Con  60.4K
      

      [bcall@l28 trafficserver]$ ss -s

      Total: 7036 (kernel 7258)
      TCP:   11404 (estab 6776, closed 4247, orphaned 349, synrecv 0, timewait 4247/0), ports 2580
      

      Attachments

        Issue Links

          Activity

            People

              masaori Masaori Koshiba
              bcall Bryan Call
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: