TS-4472: Decrement http_current_active_client_connections_stat in HTTP/2

`http_current_active_client_connections_stat` is incremented in HttpSM.
And if client connection is HTTP/1.1, this is decremented in Http1ClientTransaction.
But if client connection is HTTP/2, this is not decremented anywhere.